<resources>
    <string name="app_name">Interact</string>
    <string name="switch_camera">Switch Camera Mode</string>
    <string name="leave_meeting">Leave meeting</string>
    <string name="toggle_camera">Toggle camera</string>
    <string name="mic_turned_off">Mic turned off</string>
    <string name="webcam_turned_off">Webcam turned off</string>
    <string name="more_options">More options</string>
    <string name="create_meeting">Create a meeting</string>
    <string name="enter_meeting_code">Enter meeting code</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="join_meeting">Join a meeting</string>
    <string name="chat">Chat</string>
    <string name="notificationTitle">VideoSDK RTC is sharing your screen</string>
    <string name="notificationContent">meeting is running</string>
    <string name="write_message">Write your message</string>
    <string name="remove">Remove</string>
    <string name="toggle_mic">Toggle mic</string>
    <string name="camera_is_turned_off">Camera is turned off</string>
    <string name="mike_button">mike button</string>
    <string name="camera_button">camera button</string>
    <string name="creating_a_room_for_you">Creating a room for you...</string>
    <string name="you_are_presenting_to_everyone">You are presenting to everyone</string>
    <string name="mic_on">Microphone On</string>
    <string name="select_audio">Select Audio</string>
    <string name="copy_meeting_id">Copy Meeting ID</string>
    <string name="default_meeting_time">00:00:00</string>
    <string name="default_participant_initial">A</string>
    <string name="stop_presenting">Stop Presenting</string>
    <string name="local_network_indicator">Local network indicator</string>
    <string name="screen_share_network_indicator">Screen share network indicator</string>
    <string name="participant_network_indicator">Participant network indicator</string>
    <string name="copy">Copy</string>
    <string name="mic_button">mic button</string>
    <string name="select_audio_device">select audio device</string>

    <string-array name="meeting_options">
        <item>One to One Meeting</item>
        <item>Group Meeting</item>
    </string-array>
</resources>