<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.OneToOneCallActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/material_toolbar"
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:background="@color/transparentColor"
        app:contentInsetStart="0dp"
        app:titleTextColor="@color/white">

        <LinearLayout
            android:id="@+id/meetingLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <TextView
                android:id="@+id/txtMeetingId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                    android:text="@string/copy"/>

                <ImageButton
                    android:id="@+id/btnCopyContent"

                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="7dp"
                    android:layout_toEndOf="@id/txtMeetingId"
                    android:backgroundTint="@color/transparentColor"
                    android:contentDescription="@string/copy_meeting_id"
                    android:src="@drawable/ic_outline_content_copy_24" />

                <TextView
                    android:id="@+id/txtMeetingTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtMeetingId"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/default_meeting_time"
                    android:textColor="@color/text_color"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp">

            <ImageButton
                android:id="@+id/btnSwitchCameraMode"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/transparentColor"
                android:contentDescription="@string/switch_camera"
                android:src="@drawable/ic_baseline_flip_camera_android_24" />

        </LinearLayout>

    </com.google.android.material.appbar.MaterialToolbar>

    <FrameLayout
        android:id="@+id/participants_frameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/localScreenShareView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="3dp"
            android:backgroundTint="#2B3034"
            android:visibility="gone"
            app:cardCornerRadius="8dp"
            app:strokeColor="#2B3034">

            <ImageView
                android:id="@+id/ivLocalScreenShareNetwork"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="end"
                android:padding="6dp"
                android:layout_marginEnd="2dp"
                android:src="@drawable/green_signal"
                android:contentDescription="@string/screen_share_network_indicator" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="38dp"
                    android:layout_height="33dp"
                    android:src="@drawable/ic_screen_share"
                    android:layout_gravity="center"
                    android:contentDescription="@null" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/you_are_presenting_to_everyone"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnStopScreenShare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:letterSpacing="0"
                    android:padding="10dp"
                    android:text="@string/stop_presenting"
                    android:textAllCaps="false"
                    android:textSize="17sp"
                    app:cornerRadius="10dp"
                    android:layout_gravity="center" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/ParticipantCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="3dp"
            android:backgroundTint="#2B3034"
            android:visibility="gone"
            app:cardCornerRadius="8dp"
            app:strokeColor="#2B3034">

            <TextView
                android:id="@+id/txtParticipantName"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="@drawable/circle_shape"
                android:gravity="center"
                android:text="@string/default_participant_initial"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="40sp" />

            <live.videosdk.rtc.android.VideoView
                android:id="@+id/participantVideoView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/ivParticipantNetwork"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="end"
                android:padding="6dp"
                android:layout_marginEnd="2dp"
                android:visibility="gone"
                android:src="@drawable/green_signal"
                android:contentDescription="@string/participant_network_indicator" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="3dp"
                android:background="@drawable/name_style"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="3dp"
                    android:fontFamily="sans-serif-medium"
                    android:padding="6dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="16sp" />

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/img_participantActiveSpeaker"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="4dp"
                    android:src="@drawable/active_speaker"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:contentDescription="@null" />

                <ImageView
                    android:id="@+id/ivParticipantMicStatus"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:padding="6dp"
                    android:src="@drawable/ic_audio_off"
                    android:contentDescription="@string/mic_turned_off" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/LocalCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="3dp"
            android:backgroundTint="@color/colorPrimaryVariant"
            app:cardCornerRadius="8dp"
            app:strokeColor="@color/colorPrimaryVariant"
            android:visibility="gone">

            <TextView
                android:id="@+id/txtLocalParticipantName"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="@drawable/circle_shape"
                android:gravity="center"
                android:text="@string/default_participant_initial"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="40sp" />

            <live.videosdk.rtc.android.VideoView
                android:id="@+id/svrLocal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/ivLocalNetwork"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="end"
                android:padding="6dp"
                android:layout_marginEnd="2dp"
                android:src="@drawable/green_signal"
                android:visibility="gone"
                android:contentDescription="@string/local_network_indicator" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="3dp"
                android:background="@drawable/name_style">

                <TextView
                    android:id="@+id/tvLocalParticipantName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="3dp"
                    android:fontFamily="sans-serif-medium"
                    android:padding="6dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="16sp" />

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/img_localActiveSpeaker"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="4dp"
                    android:src="@drawable/active_speaker"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:contentDescription="@null" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </FrameLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:backgroundTint="@color/transparentColor"
        android:gravity="center_horizontal"
        android:paddingVertical="8dp"
        tools:ignore="BottomAppBar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnLeave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/leave_meeting"
                android:src="@drawable/ic_end_call"
                app:backgroundTint="@color/md_red_400"
                app:fabSize="normal"
                app:shapeAppearanceOverlay="@style/fab_square"
                app:tint="@color/white"
                app:maxImageSize="27dp" />

            <LinearLayout
                android:id="@+id/micLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="12dp"
                android:background="@drawable/layout_selected"
                android:gravity="center_vertical"
                app:borderWidth="3dp">

                <ImageButton
                    android:id="@+id/btnMic"
                    android:layout_width="21dp"
                    android:contentDescription="@string/mic_button"
                    android:layout_height="21dp"
                    android:layout_margin="8dp"
                    android:background="@color/transparentColor"
                    android:src="@drawable/ic_mic_on"
                    android:scaleType="fitXY"/>

                <ImageButton
                    android:contentDescription="@string/select_audio_device"
                    android:id="@+id/btnAudioSelection"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_margin="3dp"
                    android:background="@color/transparentColor"
                    android:src="@drawable/ic_baseline_arrow_drop_down_24"
                    android:scaleType="fitXY" />

            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnWebcam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/transparentColor"
                android:contentDescription="@string/toggle_camera"
                android:src="@drawable/ic_video_camera"
                app:tint="@color/white"
                app:backgroundTint="@color/md_grey_1000"
                app:borderWidth="1dp"
                app:fabSize="normal"
                app:maxImageSize="26dp"
                app:shapeAppearanceOverlay="@style/fab_square" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/transparentColor"
                android:contentDescription="@string/chat"
                android:src="@drawable/ic_chat"
                app:tint="@color/white"
                app:backgroundTint="@color/md_grey_1000"
                app:borderWidth="1dp"
                app:fabSize="normal"
                app:shapeAppearanceOverlay="@style/fab_square" />

        </LinearLayout>

    </com.google.android.material.bottomappbar.BottomAppBar>

</LinearLayout>
